# CoreString

./: CMakeLists.txt  main.cpp
CoreString/include/: CoreString.h  Version.h
CoreString/libs/asprintf/: asprintf.cpp  vasprintf-c99.cpp
CoreString/src/: CoreString.cpp
acow/: CoreString.h  StringUtils.h
acow/include/: StringUtils.h
acow/libs/asprintf/: asprintf.h  vasprintf-c99.cpp
acow/src/: StringUtils.cpp
